apps/media/tdarr/service.yaml
---
# Source: plex-media-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-webui
  labels:
    app.kubernetes.io/name: tdarr-server
    app.kubernetes.io/instance: tdarr-server
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  ports:
    - port: 8265
      targetPort: tdarr-webui
      protocol: TCP
      name: tdarr-webui
  selector:
    app.kubernetes.io/name: tdarr-server
    app.kubernetes.io/instance: tdarr-server
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
